# kinderkaart

./: .gitignore  AGENTS.md  CLAUDE.md  main.py  manifest.json  pyproject.toml
.github/workflows/: data-refresh.yml  deploy-pages.yml
.superpowers/sdd/: progress.md
data/prebuilt/: README.md  museum-nl.ndjson
data_pipeline/: adapter_base.py  build.py  build_detail.py  build_manifest.py  build_points.py  geo.py  geodist.py  geojson.py  hashing.py  identity.py  manifest.py  matcher.py  merge.py  merge_config.py  merge_fields.py  overrides.example.yaml  publish_gate.py  schema.py  textnorm.py  vocab.py
docs/: RUNBOOK.md
nl/2026.06.21-682e5d5/: points.json
nl/2026.06.22-7003c6b/: license.json  points.json
nl/2026.06.29-7003c6b/: points.json
scripts/: build_pipeline.py
sources/: manifest.schema.json
sources/_template/: README.md  adapter.py  (+1 more)
tests/: test_adapter_base.py  test_build_cli.py  test_build_detail.py  test_build_pipeline.py  test_build_points.py  test_den_haag_speeltuinen.py  test_eindhoven_speeltuinen.py  test_geo.py  test_geodist.py  test_geojson.py  test_hashing.py  test_identity.py  test_manifest.py  test_matcher.py  test_merge_cli.py  test_merge_fields.py  test_museum_nl.py  test_museum_nl_parse.py  test_museum_nl_snapshot.py  test_osm.py  test_publish_gate.py  test_rce_musea.py  test_restaurants_agent.py  test_schema.py  test_sources_manifests.py  test_textnorm.py  test_vocab.py  test_wikidata_museums.py
web/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+501 files in other folders)
