[project]
name = "kinderkaart"
version = "0.1.0"
description = "Map of fun things to do with kids"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[tool.uv]
dev-dependencies = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "types-PyYAML>=6"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
